update favicon adapter

--- a/theme.toml
+++ b/theme.toml
@@ -7,7 +7,7 @@ hasCJKLanguage = true                # has chinese/japanese/korean ? # 自动检
 summaryLength = 100
 paginate = 5                         # 首页显示文章数量
 enableEmoji = true
-googleAnalytics = "UA-144639639-1"                   # your google analytics id
+googleAnalytics = ""                   # your google analytics id
 disqusShortname = ""                 # your discuss shortname
 
 [author]                             # essential                     # 必需
